--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "rm dist/transitions.json && vite build",
+    "build": "vite build && rm dist/transitions.json",
     "serve": "vite preview"
   },
   "dependencies": {
