--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   ],
   "description": "Debugger for babel",
   "main": "lib/index.js",
+  "bin": {
+    "btt": "bin/index.js"
+  },
   "scripts": {
     "prepublishOnly": "npm run build --prefix ./viewer"
   },
@@ -30,6 +33,9 @@
   "homepage": "https://github.com/fengzilong/babel-time-travel#readme",
   "dependencies": {
     "@babel/generator": "^7.15.8",
+    "chalk": "^4.1.2",
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "get-port": "^5.1.1",
     "serve-handler": "^6.1.3"
   }
