--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "get-port": "^5.1.1",
-    "serve-handler": "^6.1.3"
+    "serve-handler": "^6.1.3",
+    "string-diff-viewer": "^0.2.2"
   }
 }
