--- a/viewer/package.json
+++ b/viewer/package.json
@@ -8,14 +8,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "prism-color-variables": "^1.0.1",
     "react": "^17.0.0",
-    "react-diff-viewer": "^3.1.1",
+    "react-diff-view": "^2.4.8",
     "react-dom": "^17.0.0",
     "react-select": "^5.1.0",
     "react-spinners": "^0.11.0",
-    "shiki": "^0.9.12",
-    "shiki-languages": "^0.2.7",
-    "shiki-themes": "^0.2.7"
+    "refractor": "^3.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
