--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/fengzilong/babel-time-travel#readme",
   "dependencies": {
+    "cac": "^6.7.11",
     "chalk": "^4.1.2",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
